--- a/about/index.html
+++ b/about/index.html
@@ -416,7 +416,7 @@ Retina recognition, expression recognition with applications to finance and inte
     <div class="content">
         <p class="title">A survey of face recognition techniques under occlusion.</p>
         <p class="authors">Dan Zeng, Raymond Veldhuis, Luuk Spreeuwers.</p>
-        <p class="publisher">IET Biometrics 2020 <a href="/publications/2020BMT_Survey.pdf" target="_blank" rel="external">[PDF]</a></p>
+        <p class="publisher">IET Biometrics 2020(accepted) <a href="/publications/2020BMT_Survey.pdf" target="_blank" rel="external">[PDF]</a></p>
     </div>
 </div>
 <div class="project publication_item">
@@ -424,7 +424,7 @@ Retina recognition, expression recognition with applications to finance and inte
     <div class="content">
         <p class="title">Joint Face Alignment and 3D Face Reconstruction with Application to Face Recognition.</p>
         <p class="authors">Feng Liu, Qijun Zhao, Xiaoming Liu, Dan Zeng.</p>
-        <p class="publisher">TPAMI 2020<a href="/publications/2018TPAMI.pdf" target="_blank" rel="external">[PDF]</a></p>
+        <p class="publisher">IEEE Transactions on Pattern Analysis and Machine Intelligence 2020-03(Impact Factor=17.861)<a href="/publications/2018TPAMI.pdf" target="_blank" rel="external">[PDF]</a></p>
     </div>
 </div>
  
@@ -436,7 +436,7 @@ Retina recognition, expression recognition with applications to finance and inte
     <div class="content">
         <p class="title">Combined training strategy for low-resolution face recognition with limited application specific data.</p>
         <p class="authors">Dan Zeng, Luuk Spreeuwers, Raymond Veldhuis, Qijun Zhao.</p>
-        <p class="publisher">IET Image Processing 2019 <a href="/publications/2019IP.pdf" target="_blank" rel="external">[PDF]</a></p>
+        <p class="publisher">IET Image Processing 2019-08 <a href="/publications/2019IP.pdf" target="_blank" rel="external">[PDF]</a></p>
     </div>
 </div>
 <div class="project publication_item">
@@ -444,7 +444,7 @@ Retina recognition, expression recognition with applications to finance and inte
     <div class="content">
         <p class="title">Likelihood Ratio based Loss to finetune CNNs for Very Low Resolution Face Verification.</p>
         <p class="authors">Dan Zeng, Raymond Veldhuis, Luuk Spreeuwers, Qijun Zhao.</p>
-        <p class="publisher">ICB 2019 (Oral) <a href="/publications/2019ICB.pdf" target="_blank" rel="external">[PDF]</a></p>
+        <p class="publisher">ICB 2019-06(Oral) <a href="/publications/2019ICB.pdf" target="_blank" rel="external">[PDF]</a></p>
     </div>
 </div>
 
@@ -454,7 +454,7 @@ Retina recognition, expression recognition with applications to finance and inte
     <div class="content">
         <p class="title">Disentangling Features in 3D Face Shapes for Joint Face Reconstruction and Recognition.</p>
         <p class="authors">Feng Liu, Ronghang Zhu, Dan Zeng, Qijun Zhao, Xiaoming Liu.</p>
-        <p class="publisher">CVPR 2018<a href="/publications/2018CVPR.pdf" target="_blank" rel="external">[PDF]</a></p>
+        <p class="publisher">CVPR 2018-06 <a href="/publications/2018CVPR.pdf" target="_blank" rel="external">[PDF]</a></p>
     </div>
 </div>
 
@@ -464,7 +464,7 @@ Retina recognition, expression recognition with applications to finance and inte
     <div class="content">
         <p class="title">On 3D face reconstruction via cascaded regression in shape space.</p>
         <p class="authors">Feng Liu, Dan Zeng, Jing Li, Qijun Zhao.</p>
-        <p class="publisher">Frontiers of Information Technology & Electronic Engineering 2017<a href="/publications/2017FoITEE.pdf" target="_blank" rel="external">[PDF]</a></p>
+        <p class="publisher">Frontiers of Information Technology & Electronic Engineering 2018-02 <a href="/publications/2017FoITEE.pdf" target="_blank" rel="external">[PDF]</a></p>
     </div>
 </div>
 
@@ -474,16 +474,18 @@ Retina recognition, expression recognition with applications to finance and inte
     <div class="content">
         <p class="title">Examplar Coherent 3D Face Reconstruction from Forensic Mugshot Database.</p>
         <p class="authors"><stong>Dan Zeng, Qijun Zhao, Shuqin Long, Jing Li.</stong></p>
-        <p class="publisher"> Image and Vision Computing 2017<a href="/publications/2017IVC.pdf" target="_blank" rel="external">[PDF]</a></p>
+        <p class="publisher"> Image and Vision Computing 2017-02 <a href="/publications/2017IVC.pdf" target="_blank" rel="external">[PDF]</a></p>
     </div>
 </div>
 
+
+<div class="year_title">2016</div>
 <div class="project publication_item">
     <div class="teasure"></div>
     <div class="content">
         <p class="title">Joint Face Alignment and 3D Face Reconstruction.</p>
         <p class="authors">Feng Liu, Dan Zeng, Qijun Zhao, Xiaoming Liu.</p>
-        <p class="publisher">ECCV 2016<a href="/publications/2016ECCV.pdf" target="_blank" rel="external">[PDF]</a></p>
+        <p class="publisher">ECCV 2016-10 <a href="/publications/2016ECCV.pdf" target="_blank" rel="external">[PDF]</a></p>
     </div>
 </div>
 
@@ -492,17 +494,15 @@ Retina recognition, expression recognition with applications to finance and inte
     <div class="content">
         <p class="title">Towards resolution invariant face recognition in uncontrolled scenarios.</p>
         <p class="authors">Dan Zeng, Hu Chen, Qijun Zhao.</p>
-        <p class="publisher">ICB 2016(poster)<a href="/publications/2016ICB.pdf" target="_blank" rel="external">[PDF]</a></p>
+        <p class="publisher">ICB 2016-06 <a href="/publications/2016ICB.pdf" target="_blank" rel="external">[PDF]</a></p>
     </div>
-</div>
-
-<div class="year_title">2016</div>
+</div>	      
 <div class="project publication_item">
     <div class="teasure"></div>
     <div class="content">
         <p class="title">A Novel Approach to Mugshot Based Arbitrary View Face Recognition.</p>
         <p class="authors">Dan Zeng, Shuqin Long, Jing Li, Qijun Zhao.</p>
-        <p class="publisher">Journal of the Optical Society of Korea 2016<a href="/publications/2016JOSK.pdf" target="_blank" rel="external">[PDF]</a></p>
+        <p class="publisher">Journal of the Optical Society of Korea 2016-04 <a href="/publications/2016JOSK.pdf" target="_blank" rel="external">[PDF]</a></p>
     </div>
 </div>
 
@@ -512,7 +512,7 @@ Retina recognition, expression recognition with applications to finance and inte
     <div class="content">
         <p class="title">Example based 3D Face Reconstruction from Uncalibrated Frontal and Profile Images.</p>
         <p class="authors">Jing Li, Shuqin Long, Dan Zeng, Qijun Zhao.</p>
-        <p class="publisher">ICB 2015: 1-8 <a href="/publications/2015ICB.pdf" target="_blank" rel="external">[PDF]</a></p>
+        <p class="publisher">ICB 2015-05 <a href="/publications/2015ICB.pdf" target="_blank" rel="external">[PDF]</a></p>
     </div>
 </div>
 
