--- a/about/index.html
+++ b/about/index.html
@@ -424,7 +424,7 @@ Retina recognition, expression recognition with applications to finance and inte
     <div class="content">
         <p class="title">Joint Face Alignment and 3D Face Reconstruction with Application to Face Recognition.</p>
         <p class="authors">Feng Liu, Qijun Zhao, Xiaoming Liu, Dan Zeng.</p>
-        <p class="publisher">IEEE Transactions on Pattern Analysis and Machine Intelligence(TPAMI, Impact Factor=17.861) 2020-03<a href="/publications/2018TPAMI.pdf" target="_blank" rel="external">[PDF]</a></p>
+        <p class="publisher">IEEE Transactions on Pattern Analysis and Machine Intelligence(IEEE TPAMI, Impact Factor=17.861) 2020-03<a href="/publications/2018TPAMI.pdf" target="_blank" rel="external">[PDF]</a></p>
     </div>
 </div>
  
