--- a/about/index.html
+++ b/about/index.html
@@ -359,7 +359,7 @@
     <div class="bio-text">
         <p style="font-size: 23px"><strong>Dan Zeng 曾丹, PhD.</strong></p>
 		<p>
-            Research Assistant Professor (副研究员), Postgraduate Supervisor (硕士生导师)
+            Research Assistant Professor (副研究员), Postgraduate Supervisor (硕导)
         </p>
 		<p>
 			Department of Computer Science and Engineering, <a href="https://www.sustech.edu.cn/">Southern University of Science and Technology</a>.
