--- a/about/index.html
+++ b/about/index.html
@@ -398,7 +398,7 @@ Retina recognition, expression recognition with applications to finance and inte
     <div class="content">
         <p class="title">Combating Ambiguity for hash-code Learning in Medical Instance Retrieval.</p>
         <p class="authors">Jiansheng Fang, Huazhu Fu, Dan Zeng, Xiao Yan, and Jiang Liu.</p>
-        <p class="publisher">IEEE Journal of Biomedical and Health Informatics 2021(under revision)</p>
+        <p class="publisher">IEEE Journal of Biomedical and Health Informatics 2021(accepted)</p>
     </div>
 </div>
 
@@ -407,19 +407,20 @@ Retina recognition, expression recognition with applications to finance and inte
     <div class="content">
         <p class="title">Occlusion Invariant Face Recognition Using Simultaneous Segmentation.</p>
         <p class="authors">Dan Zeng, Raymond Veldhuis, Luuk Spreeuwers, Richard Arendsen.</p>
-        <p class="publisher">IET Biometrics 2021(accepted) <a href="/publications/2021BMT_OFR.pdf" target="_blank" rel="external">[PDF]</a></p>
+        <p class="publisher">IET Biometrics 2021-05 <a href="/publications/2021BMT_OFR.pdf" target="_blank" rel="external">[PDF]</a></p>
     </div>
 </div>
-	      
-<div class="year_title">2020</div>
 <div class="project publication_item">
     <div class="teasure"></div>
     <div class="content">
         <p class="title">A survey of face recognition techniques under occlusion.</p>
         <p class="authors">Dan Zeng, Raymond Veldhuis, Luuk Spreeuwers.</p>
-        <p class="publisher">IET Biometrics 2020(accepted) <a href="/publications/2020BMT_Survey.pdf" target="_blank" rel="external">[PDF]</a></p>
+        <p class="publisher">IET Biometrics 2021-04 <a href="/publications/2020BMT_Survey.pdf" target="_blank" rel="external">[PDF]</a></p>
     </div>
-</div>
+</div>	      
+	      
+<div class="year_title">2020</div>
+
 <div class="project publication_item">
     <div class="teasure"></div>
     <div class="content">
