--- a/about/index.html
+++ b/about/index.html
@@ -398,7 +398,7 @@ Retina recognition, expression recognition with applications to finance and inte
     <div class="content">
         <p class="title">Combating Ambiguity for hash-code Learning in Medical Instance Retrieval.</p>
         <p class="authors">Jiansheng Fang, Huazhu Fu, Dan Zeng, Xiao Yan, and Jiang Liu.</p>
-        <p class="publisher">IEEE Journal of Biomedical and Health Informatics 2021<a href="/publications/2021JBHI.pdf" target="_blank" rel="external">[PDF]</a></p>
+        <p class="publisher">IEEE Journal of Biomedical and Health Informatics 2021-05 <a href="/publications/2021JBHI.pdf" target="_blank" rel="external">[PDF]</a></p>
     </div>
 </div>
 
