--- a/about/index.html
+++ b/about/index.html
@@ -386,7 +386,7 @@ Since 2012, she participated in ‘3+2+3’ Joined Study of Bachelor and Doctora
 She worked as a post-doc research fellow in the Data Management and Biometrics (DMB) Lab at the <a href="https://www.utwente.nl/">University of Twente</a> (UT), the Netherlands from 2018 to 2020, under the supervision of <a href="https://people.utwente.nl/r.n.j.veldhuis">Prof. Raymond Veldhuis</a>. 
 Her major research interests include Biometrics and Computer vision. 
 Her recent research interests lie in face super-resolution, 3D image super-resolution, face recognition and 3D face modeling, 
-facial expression recognition and animal facial landmark localisation. For publications, please see my Google Scholar in the following <a href="https://scholar.google.com/citations?user=mr_5iXsAAAAJ&hl=en">link</a>. She is a member of the IEEE. 
+facial expression recognition and animal facial landmark localisation. For publications, please see the Google Scholar in the following <a href="https://scholar.google.com/citations?user=mr_5iXsAAAAJ&hl=en">link</a>. She is a member of the IEEE. 
 </div>
 
 <hr>
