--- a/about/index.html
+++ b/about/index.html
@@ -365,7 +365,7 @@
 			Department of Computer Science and Engineering, <a href="https://www.sustech.edu.cn/">Southern University of Science and Technology</a> (SUSTech).
         </p>
 		<p>
-			Address: Room 548, Southern Tower, College of Engineering, SUSTech, Shenzhen, Guangdong Province, China.
+			Address: Room 548, South Tower, College of Engineering, SUSTech, Shenzhen, Guangdong Province, China.
         </p>
 		<p>
 			Email: zengd[at]sustech[dot]edu[dot]cn
