--- a/about/index.html
+++ b/about/index.html
@@ -394,7 +394,7 @@ facial expression recognition and animal facial landmark localisation. For publi
 <div class="honor_table">
     <table>
         <tr class="table_item">
-            <td class="table_date">2022</td>
+            <td class="table_date">2022 March</td>
             <td class="table_desc">One paper has been accepted by CVPR2022! Congratulations!</td>
         </tr>
     </table>
