--- a/about/index.html
+++ b/about/index.html
@@ -401,7 +401,7 @@ facial expression recognition and animal facial landmark localisation. For publi
     <table>
         <tr class="table_item">
             <td class="table_date">2022 March</td>
-            <td class="table_desc">One paper has been accepted by ICME2022! Congratulations!</td>
+            <td class="table_desc">One paper has been accepted by ICME2022! Congratulations to Shuiwang Li!</td>
         </tr>
     </table>
 </div>	
@@ -418,7 +418,6 @@ facial expression recognition and animal facial landmark localisation. For publi
         <p class="publisher">CVPR 2022 (Accept!) <a href="" target="_blank" rel="external">[PDF]</a></p>
     </div>
 </div>
-<div class="year_title">2022</div>
 <div class="project publication_item">
     <div class="teasure"></div>
     <div class="content">
