--- a/about/index.html
+++ b/about/index.html
@@ -624,7 +624,7 @@ Keynote speech chair for <a href="https://www.comp.hkbu.edu.hk/wsb2021/programme
 	      
 <div class="honor_table">
 Reviewer for major journals and conferences in the areas of Biometrics and pattern recognition, 
-such as IEEE TIFS, IEEE TIP, PR, PR Letters, Electronics Letters, IVC, AAAI 2021, 2022, CVPR2022, ECCV2022, FG2022 etc.
+such as IEEE TIFS, IEEE TIP, PR, PR Letters, Electronics Letters, IVC, AAAI 2021, 2022, CVPR2022, ECCV2022, ACCV2022, FG2022 etc.
 </div>
 
 
