--- a/about/index.html
+++ b/about/index.html
@@ -623,8 +623,8 @@ Keynote speech chair for <a href="https://www.comp.hkbu.edu.hk/wsb2021/programme
 </div>
 	      
 <div class="honor_table">
-Reviewer for major journals and conferences in the areas of Biometrics and pattern recognition, 
-such as IEEE TIFS, IEEE TIP, PR, PR Letters, Electronics Letters, IVC, AAAI 2021, 2022, CVPR2022, ECCV2022, ACCV2022, FG2022 etc.
+Reviewer for major journals and conferences in the areas of Biometrics, computer vision and pattern recognition, 
+such as IEEE TIFS, IEEE TIP, PR, PR Letters, Electronics Letters, IVC, AAAI 2021, 2022, CVPR2022, ECCV2022, ACM MM2022, ACCV2022, FG2022 etc.
 </div>
 
 
