--- a/about/index.html
+++ b/about/index.html
@@ -415,7 +415,7 @@ facial expression recognition and animal facial landmark localisation. For publi
     <div class="content">
         <p class="title">Face2Exp: Combating Data Biases for Facial Expression Recognition.</p>
         <p class="authors">Dan Zeng, Zhiyuan Lin, Xiao Yan, Yuting liu, Fei Wang and Bo Tang.</p>
-        <p class="publisher">CVPR 2022 (Accept!) <a href="/publications/2022CVPR.pdf" target="_blank" rel="external">[Paper]</a>
+        <p class="publisher">CVPR 2022-06 <a href="/publications/2022CVPR.pdf" target="_blank" rel="external">[Paper]</a>
 		
 		<a href="/publications/10637_poster_final.pdf" target="_blank" rel="external">[Poster]</a>
 		
@@ -429,7 +429,7 @@ facial expression recognition and animal facial landmark localisation. For publi
     <div class="content">
         <p class="title">Rank-based filter pruning for real-time UAV tracking.</p>
         <p class="authors">Xucheng Wang(*), Dan Zeng(*), Qijun Zhao, Shuiwang Li.</p>
-        <p class="publisher">ICME 2022 (Accept!) *Equally contributed.<a href="/publications/2022ICME.pdf" target="_blank" rel="external">[PDF]</a></p>
+        <p class="publisher">ICME 2022-07 *Equally contributed.<a href="/publications/2022ICME.pdf" target="_blank" rel="external">[PDF]</a></p>
     </div>
 </div>	     
 	      
