--- a/about/index.html
+++ b/about/index.html
@@ -420,7 +420,8 @@ facial expression recognition and animal facial landmark localisation. For publi
 		<a href="/publications/10637_poster_final.pdf" target="_blank" rel="external">[Poster]</a>
 		
 		<a href="/publications/10637_slide.pdf" target="_blank" rel="external">[OverviewSlide]</a>
-			
+		
+		<a href="/publications/10637_video.mp4" target="_blank" rel="external">[Video]</a>
 	    </p>
     </div>
 </div>
