--- a/about/index.html
+++ b/about/index.html
@@ -430,7 +430,7 @@ facial expression recognition and animal facial landmark localisation. For publi
     <div class="content">
         <p class="title">Rank-based filter pruning for real-time UAV tracking.</p>
         <p class="authors">Xucheng Wang(*), Dan Zeng(*), Qijun Zhao, Shuiwang Li.</p>
-        <p class="publisher">ICME 2022-07 *Equally contributed.<a href="/publications/2022ICME.pdf" target="_blank" rel="external">[PDF]</a></p>
+        <p class="publisher">ICME(Oral) 2022-07 *Equally contributed.<a href="/publications/2022ICME.pdf" target="_blank" rel="external">[PDF]</a></p>
     </div>
 </div>	     
 	      
