--- a/about/index.html
+++ b/about/index.html
@@ -432,7 +432,15 @@ facial expression recognition and animal facial landmark localisation. For publi
         <p class="authors">Xucheng Wang(*), Dan Zeng(*), Qijun Zhao, Shuiwang Li.</p>
         <p class="publisher">ICME(Oral) 2022-07 *Equally contributed.<a href="/publications/2022ICME.pdf" target="_blank" rel="external">[PDF]</a></p>
     </div>
-</div>	     
+</div>
+<div class="project publication_item">
+    <div class="teasure"></div>
+    <div class="content">
+        <p class="title">SuperVessel: Segmenting High-resolution Vessel from Low-resolution Retinal Image.</p>
+        <p class="authors">Yan Hu, Zhongxi Qiu, Dan Zeng, Li Jiang, Chen Lin, Jiang Liu.</p>
+        <p class="publisher">PRCV 2022-10.<a href="" target="_blank" rel="external">[PDF]</a></p>
+    </div>
+</div>
 	      
 <div class="year_title">2021</div>
 <div class="project publication_item">
