--- a/about/index.html
+++ b/about/index.html
@@ -415,7 +415,7 @@ facial expression recognition and animal facial landmark localisation. For publi
     <div class="content">
         <p class="title">Face2Exp: Combating Data Biases for Facial Expression Recognition.</p>
         <p class="authors">Dan Zeng, Zhiyuan Lin, Xiao Yan, Yuting liu, Fei Wang and Bo Tang.</p>
-        <p class="publisher">CVPR 2022-06 <a href="/publications/2022CVPR.pdf" target="_blank" rel="external">[Paper]</a>
+        <p class="publisher">CVPR 2022-06 (New Orleans, USA)<a href="/publications/2022CVPR.pdf" target="_blank" rel="external">[Paper]</a>
 		
 		<a href="/publications/10637_poster_final.pdf" target="_blank" rel="external">[Poster]</a>
 		
@@ -430,7 +430,7 @@ facial expression recognition and animal facial landmark localisation. For publi
     <div class="content">
         <p class="title">Rank-based filter pruning for real-time UAV tracking.</p>
         <p class="authors">Xucheng Wang(*), Dan Zeng(*), Qijun Zhao, Shuiwang Li.</p>
-        <p class="publisher">ICME(Oral) 2022-07 *Equally contributed.<a href="/publications/2022ICME.pdf" target="_blank" rel="external">[PDF]</a></p>
+        <p class="publisher">ICME(Oral) 2022-07 *Equally contributed.(Taipei, Taiwan, China)<a href="/publications/2022ICME.pdf" target="_blank" rel="external">[PDF]</a></p>
     </div>
 </div>
 <div class="project publication_item">
@@ -438,7 +438,7 @@ facial expression recognition and animal facial landmark localisation. For publi
     <div class="content">
         <p class="title">SuperVessel: Segmenting High-resolution Vessel from Low-resolution Retinal Image.</p>
         <p class="authors">Yan Hu, Zhongxi Qiu, Dan Zeng, Li Jiang, Chen Lin, Jiang Liu.</p>
-        <p class="publisher">PRCV 2022-10.<a href="" target="_blank" rel="external">[PDF]</a></p>
+        <p class="publisher">PRCV 2022-10 (Shenzhen, China).<a href="" target="_blank" rel="external">[PDF]</a></p>
     </div>
 </div>
 	      
