--- a/about/index.html
+++ b/about/index.html
@@ -406,7 +406,7 @@ facial expression recognition and animal facial landmark localisation. For publi
     </table>
     <table>
         <tr class="table_item">
-            <td class="table_date">2022 September</td>
+            <td class="table_date">2022 Sept.</td>
             <td class="table_desc">One paper has been accepted by Neurocomputing! Congratulations to Jiansheng Fang!</td>
         </tr>
     </table>
