--- a/about/index.html
+++ b/about/index.html
@@ -413,7 +413,7 @@ facial expression recognition and animal facial landmark localisation. For publi
     <table>
         <tr class="table_item">
             <td class="table_date">2022 Sept. 8</td>
-            <td class="table_desc">My research project has been funded by the Youth Program of NSFC！Congratulations!</td>
+            <td class="table_desc">My research project has been funded by the Youth Program of NSFC! Congratulations!</td>
         </tr>
     </table>
 </div>	
