--- a/about/index.html
+++ b/about/index.html
@@ -468,7 +468,7 @@ facial expression recognition and animal facial landmark localisation. For publi
     <div class="content">
         <p class="title">Combating Spatial Redundancy with Spectral Norm Attention in Convolutional Learners.</p>
         <p class="authors">Jiansheng Fang, Dan Zeng, Xiao Yan, Yubing Zhang, Hongbo Liu, Bo Tang, Ming Yang, Jiang Liu.</p>
-        <p class="publisher">Neurocomputing (accepted).<a href="" target="_blank" rel="external">[PDF]</a></p>
+        <p class="publisher">Neurocomputing (accepted).<a href="https://authors.elsevier.com/c/1flvt3INukKhRU" target="_blank" rel="external">[PDF]</a></p>
     </div>
 </div>
 	      
