--- a/about/index.html
+++ b/about/index.html
@@ -394,6 +394,12 @@ facial expression recognition and animal facial landmark localisation. For publi
 <div class="honor_table">
     <table>
         <tr class="table_item">
+            <td class="table_date">2022 Sept.</td>
+            <td class="table_desc">One paper has been accepted by ACML2023! Congratulations to Shuiwang Li!</td>
+        </tr>
+    </table>
+    <table>
+        <tr class="table_item">
             <td class="table_date">2022 Sept. 8</td>
             <td class="table_desc">My research project has been funded by the Youth Program of NSFC! Congratulations!</td>
         </tr>
