--- a/about/index.html
+++ b/about/index.html
@@ -395,31 +395,31 @@ facial expression recognition and animal facial landmark localisation. For publi
     <table>
         <tr class="table_item">
             <td class="table_date">2022 Sept.</td>
-            <td class="table_desc">One paper has been accepted by ACML2022! Congratulations to Shuiwang Li!</td>
+            <td class="table_desc">One paper has been accepted by ACML2022! congrats to Shuiwang Li!</td>
         </tr>
     </table>
     <table>
         <tr class="table_item">
             <td class="table_date">2022 Sept. 8</td>
-            <td class="table_desc">My research project has been funded by the Youth Program of NSFC! Congratulations!</td>
+            <td class="table_desc">My research project has been funded by the Youth Program of NSFC :)</td>
         </tr>
     </table>
     <table>
         <tr class="table_item">
             <td class="table_date">2022 Sept.</td>
-            <td class="table_desc">One paper has been accepted by Neurocomputing! Congratulations to Jiansheng Fang!</td>
+            <td class="table_desc">One paper has been accepted by Neurocomputing! congrats to Jiansheng Fang!</td>
         </tr>
     </table>
     <table>
         <tr class="table_item">
             <td class="table_date">2022 March</td>
-            <td class="table_desc">One paper has been accepted by ICME2022! Congratulations to Shuiwang Li!</td>
+            <td class="table_desc">One paper has been accepted by ICME2022! congrats to Shuiwang Li!</td>
         </tr>
     </table>
     <table>
         <tr class="table_item">
             <td class="table_date">2022 March</td>
-            <td class="table_desc">One paper has been accepted by CVPR2022! Congratulations!</td>
+            <td class="table_desc">One paper has been accepted by CVPR2022!</td>
         </tr>
     </table>    
 </div>	
