--- a/about/index.html
+++ b/about/index.html
@@ -474,7 +474,7 @@ facial expression recognition and animal facial landmark localisation. For publi
     <div class="content">
         <p class="title">Effciency and Precision Trade-offs in UAV Tracking with Filter Pruning and Dynamic Channel Weighting.</p>
         <p class="authors">Pengzhi Zhong(*), Dan Zeng(*), Xucheng Wang, Shuiwang Li.</p>
-        <p class="publisher">FSDM 2022-11 *Equally contributed. (Xiamen, China).<a href="" target="_blank" rel="external">[PDF]</a></p>
+        <p class="publisher">FSDM 2022-11 *Equally contributed. (Xiamen, China).<a href="/publications/2022FSDM.pdf" target="_blank" rel="external">[PDF]</a></p>
     </div>
 </div>
 <div class="project publication_item">
