--- a/about/index.html
+++ b/about/index.html
@@ -472,6 +472,14 @@ facial expression recognition and animal facial landmark localisation. For publi
 <div class="project publication_item">
     <div class="teasure"></div>
     <div class="content">
+        <p class="title">Combating Spatial Redundancy with Spectral Norm Attention in Convolutional Learners.</p>
+        <p class="authors">Jiansheng Fang, Dan Zeng, Xiao Yan, Yubing Zhang, Hongbo Liu, Bo Tang, Ming Yang, Jiang Liu.</p>
+        <p class="publisher">Neurocomputing 2022-10.<a href="/publications/2022Neurocomputing.pdf" target="_blank" rel="external">[PDF]</a></p>
+    </div>
+</div>	      
+<div class="project publication_item">
+    <div class="teasure"></div>
+    <div class="content">
         <p class="title">Effciency and Precision Trade-offs in UAV Tracking with Filter Pruning and Dynamic Channel Weighting.</p>
         <p class="authors">Pengzhi Zhong(*), Dan Zeng(*), Xucheng Wang, Shuiwang Li.</p>
         <p class="publisher">FSDM 2022-11 *Equally contributed. (Xiamen, China).<a href="/publications/2022FSDM.pdf" target="_blank" rel="external">[PDF]</a></p>
@@ -480,9 +488,9 @@ facial expression recognition and animal facial landmark localisation. For publi
 <div class="project publication_item">
     <div class="teasure"></div>
     <div class="content">
-        <p class="title">Combating Spatial Redundancy with Spectral Norm Attention in Convolutional Learners.</p>
-        <p class="authors">Jiansheng Fang, Dan Zeng, Xiao Yan, Yubing Zhang, Hongbo Liu, Bo Tang, Ming Yang, Jiang Liu.</p>
-        <p class="publisher">Neurocomputing (accepted).<a href="https://authors.elsevier.com/c/1flvt3INukKhRU" target="_blank" rel="external">[PDF]</a></p>
+        <p class="title">Learning Disentangled Representation in Pruning for real-time UAV Tracking.</p>
+        <p class="authors">Siyu Ma, Yuting Liu, Dan Zeng, Yaxiao Liao, Xiaoyu Xu, Shuiwang Li.</p>
+        <p class="publisher">ACML 2022-12 (Hyderabad, India).<a href="/publications/2022ACML.pdf" target="_blank" rel="external">[PDF]</a></p>
     </div>
 </div>
 	      
