--- a/about/index.html
+++ b/about/index.html
@@ -489,7 +489,7 @@ facial expression recognition and animal facial landmark localisation. For publi
     <div class="teasure"></div>
     <div class="content">
         <p class="title">Learning Disentangled Representation in Pruning for real-time UAV Tracking.</p>
-        <p class="authors">Siyu Ma, Yuting Liu, Dan Zeng, Yaxiao Liao, Xiaoyu Xu, Shuiwang Li.</p>
+        <p class="authors">Siyu Ma, Yuting Liu, Dan Zeng, Yaxin Liao, Xiaoyu Xu, Shuiwang Li.</p>
         <p class="publisher">ACML 2022-12 (Hyderabad, India).<a href="/publications/2022ACML.pdf" target="_blank" rel="external">[PDF]</a></p>
     </div>
 </div>
