--- a/about/index.html
+++ b/about/index.html
@@ -466,7 +466,7 @@ facial expression recognition and animal facial landmark localisation. For publi
     <div class="content">
         <p class="title">SuperVessel: Segmenting High-resolution Vessel from Low-resolution Retinal Image.</p>
         <p class="authors">Yan Hu, Zhongxi Qiu, Dan Zeng, Li Jiang, Chen Lin, Jiang Liu.</p>
-        <p class="publisher">PRCV 2022-10 (Shenzhen, China).<a href="" target="_blank" rel="external">[PDF]</a></p>
+        <p class="publisher">PRCV 2022-10 (Shenzhen, China).<a href="/publications/2022PRCV.pdf" target="_blank" rel="external">[PDF]</a></p>
     </div>
 </div>
 <div class="project publication_item">
@@ -691,7 +691,7 @@ Keynote speech chair for <a href="https://www.comp.hkbu.edu.hk/wsb2021/programme
 	      
 <div class="honor_table">
 Reviewer for major journals and conferences in the areas of Biometrics, computer vision and pattern recognition, 
-such as IEEE TIFS, IEEE TIP, IEEE TMI, PR, PR Letters, Artificial Intelligence, Electronics Letters, IVC, AAAI 2021, 2022, CVPR2022, ECCV2022, ACM MM2022, FG2022 etc.
+such as IEEE TIFS, IEEE TIP, IEEE TMI, PR, PR Letters, Artificial Intelligence, Electronics Letters, IVC, AAAI'21,AAAI'22, CVPR'22,CVPR'23, ICCV'23, ECCV'22, ACM MM'22, FG'22 etc.
 </div>
 
 
