--- a/about/index.html
+++ b/about/index.html
@@ -455,7 +455,7 @@ facial expression recognition and animal facial landmark localisation. For publi
     <div class="content">
         <p class="title">Analyzing and Combating Attribute Bias for Face Restoration.</p>
         <p class="authors">Zelin Li, Dan Zeng(#), Xiao Yan, Qiaomu Shen and Bo Tang.</p>
-        <p class="publisher">IJCAI 2023-08 # Corresponding author(Macao, China)<a href="" target="_blank" rel="external">[Paper]</a></p>
+        <p class="publisher">IJCAI 2023-08 #Corresponding author.(Macao, China)<a href="" target="_blank" rel="external">[PDF]</a></p>
     </div>
 </div>
 <div class="project publication_item">
@@ -463,7 +463,7 @@ facial expression recognition and animal facial landmark localisation. For publi
     <div class="content">
         <p class="title">Towards Discriminative Representations with Contrastive Instances for Real-Time UAV Tracking.</p>
         <p class="authors">Dan Zeng, Mingliang Zou, Xucheng Wang and Shuiwang Li.</p>
-        <p class="publisher">ICME 2023-07 (Brisbane, Australia)<a href="" target="_blank" rel="external">[Paper]</a></p>
+        <p class="publisher">ICME 2023-07 (Brisbane, Australia)<a href="" target="_blank" rel="external">[PDF]</a></p>
     </div>
 </div>
 <div class="year_title">2022</div>
