--- a/about/index.html
+++ b/about/index.html
@@ -395,6 +395,12 @@ facial expression recognition and animal facial landmark localization. For publi
     <table>
         <tr class="table_item">
             <td class="table_date">2023 June</td>
+            <td class="table_desc">One paper has been accepted by IET Image Processing!/td>
+        </tr>
+    </table>
+    <table>
+        <tr class="table_item">
+            <td class="table_date">2023 June</td>
             <td class="table_desc">One paper has been accepted by Intelligent Data Analysis! congrats to Gaoli Sang!</td>
         </tr>
     </table>
@@ -470,6 +476,14 @@ facial expression recognition and animal facial landmark localization. For publi
         <p class="title">Towards Discriminative Representations with Contrastive Instances for Real-Time UAV Tracking.</p>
         <p class="authors">Dan Zeng, Mingliang Zou, Xucheng Wang and Shuiwang Li.</p>
         <p class="publisher">ICME 2023-07 (Brisbane, Australia)<a href="" target="_blank" rel="external">[PDF]</a></p>
+    </div>
+</div>
+<div class="project publication_item">
+    <div class="teasure"></div>
+    <div class="content">
+        <p class="title">Cascaded Face Super-Resolution with Shape and Identity Priors.</p>
+        <p class="authors">Dan Zeng, Zelin Li, Xiao Yan, Wen Jiang, Xinshao Wang, Jiang Li and Bo Tang.</p>
+        <p class="publisher">IET Image Processing 2023-06. <a href="" target="_blank" rel="external">[PDF]</a></p>
     </div>
 </div>
 <div class="project publication_item">
