--- a/about/index.html
+++ b/about/index.html
@@ -395,7 +395,7 @@ facial expression recognition and animal facial landmark localization. For publi
     <table>
         <tr class="table_item">
             <td class="table_date">2023 June</td>
-            <td class="table_desc">One paper has been accepted by IET Image Processing!/td>
+            <td class="table_desc">One paper has been accepted by IET Image Processing!</td>
         </tr>
     </table>
     <table>
