--- a/about/index.html
+++ b/about/index.html
@@ -378,7 +378,7 @@
 </div>
 
 <tr class="table_item_2">
- <td class="table_title">I am seeking highly motivated students, RAs, and interns to be part of our team. If you're interested, you are welcome to drop me an email.</td>
+ <td class="table_title">I am seeking highly motivated students, RAs, and interns to be part of our team. If you're interested, I encourage you to reach out to me via email to tell me more about yourself and why you are interested in working with me.</td>
 </tr>
 
 	      
